WIP: Adding picarro function

--- a/functions/scrape/Dockerfile
+++ b/functions/scrape/Dockerfile
@@ -1,3 +1,5 @@
 FROM openghg/pipeline-base:latest
 
 COPY route.py /function/
+
+ENTRYPOINT ["/python/bin/fdk", "/function/route.py", "handle_invocation"]
