--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,14 +43,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           pip install flake8
-          flake8 openghg/ --count --statistics
+          flake8 gather/ --count --statistics
       - name: Install gather
         run: |
           pip install -r requirements-dev.txt
           pip install .
       - name: Run mypy
         run: |
-          mypy --python-version ${{ matrix.python-version }} openghg/
+          mypy --python-version ${{ matrix.python-version }} gather/
       - name: Test with pytest
         env:
           OPENGHG_PATH: /tmp/openghg_store
