--- a/mypy.ini
+++ b/mypy.ini
@@ -31,6 +31,9 @@ ignore_missing_imports = True
 [mypy-tqdm]
 ignore_missing_imports = True
 
+[mypy-git]
+ignore_missing_imports = True
+
 [mypy-openghg.*]
 ignore_missing_imports = True
 
