--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,11 @@
 name = openghg
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = Apache
+license = Apache Software License
 author = Gareth Jones
-url = https://github.com/openghg/webscrape
+url = https://github.com/openghg/gather
 classifiers =
-	License :: OSI Approved :: Apache
+	License :: OSI Approved :: Apache Software License
 	Intended Audience :: Education
 	Intended Audience :: Science/Research
 	Topic :: Scientific/Engineering
