--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,8 +44,9 @@ jobs:
           python -m pip install --upgrade pip wheel
           pip install flake8
           flake8 gather/ --count --statistics
-      - name: Install requirements
+      - name: Install gather
         run: |
+          pip install .
           pip install -r requirements-dev.txt
       - name: Run mypy
         run: |
