--- a/functions/beaco2n/func.yaml
+++ b/functions/beaco2n/func.yaml
@@ -1,10 +1,10 @@
 schema_version: 20180708
-name: scrape
-version: 0.0.44
+name: crds
+version: 0.0.1
 runtime: docker
 memory: 2048
 timeout: 120
 triggers:
-- name: scrape
+- name: beaco2n
   type: http
-  source: /web-scrape
+  source: /beaco2n
